--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="Front-end Developer, Web Developer, HTML CSS Bootstrap, jQuery Developer, Shayan Khan Portfolio, Exyton Solutions">
 <meta name="author" content="Shayan Khan">
 <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="CkNgIXOowSn5FUrPWq2O35dW9qQnEKWhkhS9FeVtrB0" />
 <meta property="og:title" content="Shayan Khan | Front-end Developer">
 <meta property="og:description" content="Modern and responsive web development portfolio by Shayan Khan.">
 <meta property="og:image" content="exyton.png">
@@ -282,5 +283,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
