--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="card-skill p-3">
                         <h5>Finzaro | Expense Tracker</h5>
                         <p class="mb-1">Built with HTML, CSS, JS</p>
-                        <a class="btn btn-outline-light btn-sm mt-2" href="https://shanicodes-star.github.io/Finzaro-Expense_Tracker/">View</a>
+                        <a class="btn btn-outline-light btn-sm mt-2" href="https://shanicodes-star.github.io/Finzaro-Expense_Tracker/" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="col-md-4 reveal">
@@ -286,4 +286,5 @@
 
 
 </html>
+
 
