--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="col-md-4 reveal">
                     <div class="card-skill p-3">
                         <h5>Finzaro | Expense Tracker</h5>
-                        <p class="mb-1">Built with HTML, CSS, JS</p>
+                        <p class="mb-1">Build with HTML, CSS, JS</p>
                         <a class="btn btn-outline-light btn-sm mt-2" href="https://shanicodes-star.github.io/Finzaro-Expense_Tracker/" target="_blank">View</a>
                     </div>
                 </div>
@@ -272,8 +272,7 @@
     <footer>
         <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
             <div class="mb-2 mb-md-0">© <span id="year"></span> ShaniCodes-Star. All rights reserved.</div>
-            <div>Made with <i class="fa fa-heart" style="color:#e11d48"></i> • <small class="text-light">Front-end
-                    Developer</small></div>
+            <div>Made with <i class="fa fa-heart" style="color:#e11d48"></i> • <small class="text-light"> Shayan Khan</small></div>
         </div>
     </footer>
 
@@ -286,5 +285,6 @@
 
 
 </html>
+
 
 
