--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
                     </div>
                 </div>
             </div>
+            <div class="row g-4 mt-3">
+                <div class="col-md-4 reveal">
+                    <div class="card-skill p-3">
+                        <h5>VertiCV | CV Builder</h5>
+                        <p class="mb-1">VertiCV is a next-generation Resume Builder</p>
+                        <a class="btn btn-outline-light btn-sm mt-2" href="https://shanicodes-star.github.io/VertiCV-CV_Builder/" target="_blank">View</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -285,6 +294,7 @@
 
 
 </html>
+
 
 
 
