--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="card-skill p-3">
                         <h5>Other UI Mini projects</h5>
                         <p class="mb-1">Components & interactions</p>
-                        <a class="btn btn-outline-light btn-sm mt-2" href="#">View</a>
+                        <a class="btn btn-outline-light btn-sm mt-2" href="https://github.com/shanicodes-star" target="_blank">View</a>
                     </div>
                 </div>
             </div>
@@ -294,6 +294,7 @@
 
 
 </html>
+
 
 
 
